--- a/CreateAppShapefiles/App2_AggregatedShape/App2ShapeFiles_Custom-Basin.ipynb
+++ b/CreateAppShapefiles/App2_AggregatedShape/App2ShapeFiles_Custom-Basin.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating Shapefiles for Web App - Basin\n",
+    "# Creating Shapefiles for Web App - Custom-Basin\n",
     "\n",
     "Inputs: \n",
     "- Pagg_ReportingUnit.csv.  Contains reportinug unit info from WaDE database.\n",
@@ -244,7 +244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-4-c88b26470550>:8: SettingWithCopyWarning: \n",
+      "<ipython-input-4-0db9958bc91f>:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -630,6 +630,7 @@
     "\n",
     "# Create temporal dataframes for state specific and reportingunit type storage\n",
     "df_1RU_Custom_TX = df_1RU[(df_1RU.ReportingUnitTypeCV == 'Basin') & ((df_1RU.StateCV == 'TX'))]\n",
+    "\n",
     "df_1RU_Custom_TX['ReportingUnitName'] = df_1RU_Custom_TX['ReportingUnitName'].str.title()\n",
     "\n",
     "# retreive ReportingUnitUUID.\n",
@@ -2137,7 +2138,7 @@
    "source": [
     "# Export the dataframe to a shapefile.\n",
     "dfsOut = gpd.GeoDataFrame(outdf,  crs=\"EPSG:4326\", geometry='geometry') # covert to geodataframe\n",
-    "dfsOut.to_file(\"Processed_Shapefiles/WaDE_Basin.shp\") # export shape file"
+    "dfsOut.to_file(\"Processed_Shapefiles/Custom-Basin.shp\") # export shape file"
    ]
   }
  ],
